src/test/ui/did_you_mean/issue-38147-1.stderr
error[E0389]: cannot borrow data mutably in a `&` reference
  --> $DIR/issue-38147-1.rs:27:9
   |
LL |     fn f(&self) {
   |          ----- use `&mut self` here to make mutable
LL |         self.s.push('x'); //~ ERROR cannot borrow data mutably
   |         ^^^^^^ assignment into an immutable reference

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0389"
